...
    CGRect btnFrame = CGRectZero;
    if (UI_USER_INTERFACE_IDIOM() == UIUserInterfaceIdiomPad)   btnFrame = CGRectMake(0, 0, btnBg.size.width, btnBg.size.height);
    else btnFrame = CGRectMake(0, 0, btnBg.size.width / 1.5, btnBg.size.height / 1.5);
    
    UIButton * newDocBtn = [UIButton buttonWithType:UIButtonTypeCustom];
    [newDocBtn addTarget:self action:@selector(newDocBtnClick:) forControlEvents:UIControlEventTouchUpInside];
    UIImage * newDocBtnImage = [[UIImage alloc] initWithContentsOfFile:[[NSBundle mainBundle] pathForResource:@"txtIcon" ofType:@"png"]];
    UIImage * newDocBtnImagePush = [[UIImage alloc] initWithContentsOfFile:[[NSBundle mainBundle] pathForResource:@"txtIconPush" ofType:@"png"]];
    newDocBtn.frame = btnFrame;
    [newDocBtn setBackgroundImage:btnBg forState:UIControlStateNormal];
    [newDocBtn setBackgroundImage:btnBgPush forState:UIControlStateHighlighted];
    [newDocBtn setImage:newDocBtnImage forState:UIControlStateNormal];
    [newDocBtn setImage:newDocBtnImagePush forState:UIControlStateHighlighted];
...
#pragma mark Popovers

- (NSString *)textForBtnAtIndex:(int)index popoverContent:(PopoverContent *)popoverContent
{
     if (popoverContent == _popoverContentDelete)
    {
        if (index == 0) return NSLocalizedString(@"Delete", nil);
    }
    else if (popoverContent == _popoverContentAdd)
    {
        if (index == 0) return NSLocalizedString(@"Folder", nil);
        else if (index == 1) return NSLocalizedString(@"File", nil);
    }
    else if (popoverContent == _popoverContentCCP)
    {
        if (popoverContent.btnCount == 1) return NSLocalizedString(@"Paste", nil);
        else if (popoverContent.btnCount == 2)
        {
            if (index == 0) return NSLocalizedString(@"Copy", nil);
            else if (index == 1) return NSLocalizedString(@"Cut", nil);
        }
        else if (popoverContent.btnCount == 3)
        {
            if (index == 0) return NSLocalizedString(@"Copy", nil);
            else if (index == 1) return NSLocalizedString(@"Cut", nil);
            else if (index == 2)
            {
                if ([[ClipboardManager sharedManager] isFree]) return NSLocalizedString(@"Rename", nil);
                else return NSLocalizedString(@"Paste", nil);
            }
        }
        else if (popoverContent.btnCount == 4)
        {
            if (index == 0) return NSLocalizedString(@"Copy", nil);
...
            else if ([self canSaveToCameraRoll]) return NSLocalizedString(@"Save", nil);
        }
        else if (index == 2) return NSLocalizedString(@"Save", nil);
    }
    else if(popoverContent == _popoverContentArchive)
    {
        if (index == 0) return NSLocalizedString(@"Archive", nil);
        else if (index == 1) return NSLocalizedString(@"With Password", nil);
    }
    
    return nil;
}

...
