...
        
        self.autoresizingMask = UIViewAutoresizingFlexibleWidth | UIViewAutoresizingFlexibleHeight;
        
        UIButton * btn = [UIButton buttonWithType:UIButtonTypeCustom];
        btn.frame = _superView.bounds;
        btn.autoresizingMask = self.autoresizingMask;
        [btn setBackgroundImage:[UIImage imageNamed:@"alertBg"] forState:UIControlStateNormal];
        [btn addTarget:self action:@selector(cancel) forControlEvents:UIControlEventTouchUpInside];
        [self addSubview:btn];
        
        _contentView = [[UIImageView alloc] initWithImage:[UIImage imageNamed:@"alertContentFolder"]];
        _contentView.userInteractionEnabled = true;
        _contentView.autoresizingMask = UIViewAutoresizingFlexibleLeftMargin | UIViewAutoresizingFlexibleRightMargin |   UIViewAutoresizingFlexibleBottomMargin | UIViewAutoresizingFlexibleTopMargin;
        _contentViewFrame = _contentView.frame;
        
        int horizontBorderSpace;
        int verticalBorderSpace;
...
