...
- (void) customizeInterface
{
    UIImage * patternImage = [UIImage imageNamed:@"folderBorder"];
    [self setImageBorder:patternImage];
    
    [navBar setBackgroundImage:[UIImage imageNamed:@"navBarBG"]];
    [navBar setIconImage:[UIImage imageNamed:@"folderNavBarIcon"]];
    [navBar setBackButtonImage:[UIImage imageNamed:@"backBtnFolder"]];
    [navBar setViewModeButtonImage:[UIImage imageNamed:@"listBtnFolder"]];
    [navBar setSettingsButtonImage:[UIImage imageNamed:@"settingsBtnFolder"]];
    [navBar setPreviewButtonImage:[UIImage imageNamed:@"previewBtnFolder"]];
    [navBar setLabelTextColor:[UIColor colorWithPatternImage:patternImage]];
    
...
