...
        imgViewFrame.size.height -= frame.size.height / 3;
        
        UIImageView * imgView = [self initCustomImageViewWithFrame:imgViewFrame highlightedImage:[UIImage imageNamed:@"addBtnDisabled"]];
        [_imgViews addObject:imgView];
        [self addSubview:imgView];
        [imgView release];
        UIButton * btnAdd = [self customBtnWithFrame:btnFrame title:NSLocalizedString(@"Add", nil)];
        btnAdd.frame = btnFrame;
        btnAdd.tag = ToolBarBtnAdd;
        [_btns addObject:btnAdd];
        [self addSubview:btnAdd];
        
        btnFrame.origin.x += btnFrame.size.width;
...
